<resources>
    <string name="app_name">Siperpus App</string>
    <string name="buat_anggota">➕Anggota</string>
    <string name="masukkan_nim">Masukkan NIM</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_kota">Masukkan Kota</string>
    <string name="masukkan_email">Masukkan e-mail</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="tambah">Tambah</string>
    <string name="hapus">Hapus</string>
    <string name="hasil">Hasil</string>
    <string name="hapus_anggota">🗑️Hapus</string>
    <string name="loading">Loading... 🌐</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>