<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".AddAnggotaActivity">

            <EditText
                android:id="@+id/nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:autofillHints="24060119130000"
                android:hint="@string/masukkan_nim"
                android:inputType="text" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:autofillHints="Johny"
                android:hint="@string/masukkan_nama"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="12341234"
                android:hint="@string/masukkan_password"
                android:inputType="text"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Jl. Jalan"
                android:hint="@string/masukkan_alamat"
                android:inputType="text" />

            <EditText
                android:id="@+id/kota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Semarang"
                android:hint="@string/masukkan_kota"
                android:inputType="text" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="halo@unchdeep.id"
                android:hint="@string/masukkan_email"
                android:inputType="text"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="08123456788"
                android:hint="@string/masukkan_nomor_telepon"
                android:inputType="text" />

            <!--button for adding data-->
            <Button
                android:id="@+id/idBtnPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/tambah"
                android:textAllCaps="false" />

            <!--text view for displaying our API response-->
            <TextView
                android:id="@+id/idTVResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/hasil"
                android:textAlignment="center"
                android:textSize="15sp" />

            <!--progress bar for loading -->
            <ProgressBar
                android:id="@+id/idLoadingPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>