<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:alpha="1"
        android:background="@drawable/bghapus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".DeleteAnggotaActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="Hapus Anggota"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="356dp"
                android:background="@drawable/btnputih"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="  NIM"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="24060119130000"
                    android:hint="@string/masukkan_nim"
                    android:inputType="text" />
            </LinearLayout>


            <!--button for deleting data-->
            <Button
                android:id="@+id/idBtnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/hapus"
                android:textAllCaps="false"
                android:background="@drawable/button"/>

            <!--text view for displaying our API response-->
            <TextView
                android:id="@+id/idTVResponse2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/hasil"
                android:textColor="@android:color/holo_blue_light"
                android:textAlignment="center"
                android:textSize="15sp"/>

            <!--progress bar for loading -->
            <ProgressBar
                android:id="@+id/idLoadingPB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
